Fix images that are too wide to sit alongside the sidebar

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -193,7 +193,7 @@ blockquote {
 
 img {
   border: 0;
-  max-width: 800px;
+  max-width: 700px;
 }
 
 .left, .alignleft {
